# MyKi

./: .gitignore  Cargo.toml  README.md  SECURITY_COMPARISON.md  TECHNICAL_SPECIFICATION.md
.claude/: settings.local.json
.github/workflows/: release.yml
logs/: myki_cli.log.2026-05-05
myki_app/: README.md  pubspec.yaml
myki_app/android/: build.gradle.kts
myki_app/android/app/: build.gradle.kts
myki_app/android/app/src/main/: AndroidManifest.xml
myki_app/android/app/src/main/kotlin/com/myki/myki_app/: MainActivity.kt
myki_app/ios/Runner/: Info.plist
myki_app/ios/Runner.xcodeproj/: project.pbxproj
myki_app/lib/: app.dart  main.dart
myki_app/lib/core/models/: credential.dart  sync_models.dart
myki_app/lib/core/services/: attachment_service.dart  biometric_service.dart  clipboard_service.dart  credential_database.dart  device_pairing_service.dart  emergency_access_service.dart  import_export_service.dart  rust_bridge_service.dart  sync_service.dart  totp_service.dart  vault_service.dart
myki_app/lib/core/services/sync/: signaling_client.dart  webrtc_manager.dart
myki_app/lib/core/theme/: app_theme.dart
myki_app/lib/presentation/blocs/auth/: auth_bloc.dart  auth_event.dart  auth_state.dart
myki_app/lib/presentation/blocs/vault/: vault_bloc.dart  vault_event.dart  vault_state.dart
myki_app/lib/presentation/pages/: add_credential_page.dart  credential_detail_page.dart  unlock_page.dart  vault_page.dart
myki_app/lib/presentation/widgets/: credential_tile.dart  totp_display.dart
myki_app/test/: widget_test.dart
myki_cli/: Cargo.toml  README.md
myki_cli/src/: main.rs
myki_core/: Cargo.toml  README.md
myki_core/src/: ffi.rs  lib.rs
myki_core/src/crypto/: kdf.rs  keys.rs  mod.rs  symmetric.rs
myki_core/src/totp/: generator.rs  mod.rs
myki_core/src/vault/: database.rs  mod.rs  models.rs
myki_extension/: Cargo.toml  tauri.conf.json
myki_extension/src/: commands.rs  crypto.rs  main.rs  vault.rs
myki_extension/src-tauri/: Cargo.toml  tauri.conf.json
myki_extension/src-tauri/icons/: icon.icns
myki_extension/src-tauri/src/: commands.rs  crypto.rs  main.rs  vault.rs
myki_extension/web-extension/: background.js  com.myki.passwordmanager.json  manifest.json  popup.html  popup.js  style.css
myki_native_host/: Cargo.toml
myki_native_host/src/: main.rs
myki_signaling_server/: Cargo.toml
myki_signaling_server/src/: main.rs
