[package]
name = "myki-cli"
version = "0.1.0"
edition = "2021"
description = "Secure CLI for Myki Password Manager"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rpassword = "7.3"
myki_core = { path = "../myki_core" }
anyhow = "1.0"
indicatif = "0.17"
