[package]
name = "myki-cli"
version = "0.1.0"
edition = "2021"
description = "Secure CLI for Myki Password Manager"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
rpassword = "7.3"
myki_core = { workspace = true }
anyhow = "1.0"
indicatif = "0.17"
base64 = "0.21"
rusqlite = { workspace = true }
