[package]
name = "myki_core"
version = "0.1.0"
edition = "2021"
authors = ["Myki Team"]
description = "Secure password manager core library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/myki/myki-core"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Cryptography
argon2 = "0.5"
aes-gcm = "0.10"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
base32 = "0.5"

# Random
rand = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Error handling
thiserror = "1"

# Base64 encoding
base64 = "0.21"

# URL parsing
url = "2"

# UUID generation
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
zeroize = { version = "1", features = ["derive"] }
