[package]
name = "myki_core"
version = "0.2.0"
edition = "2021"
authors = ["Myki Team"]
description = "Secure password manager core library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/myki/myki-core"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Cryptography
argon2 = { workspace = true }
aes-gcm = { workspace = true }
hmac = "0.12"
sha1 = "0.10"
sha2 = { workspace = true }
base32 = "0.5"

# Random
rand = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
rusqlite = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Base64 encoding
base64 = "0.21"

# URL parsing
url = { workspace = true }

# UUID generation
uuid = { workspace = true }
libc = "0.2"
zeroize = { version = "1", features = ["derive"] }
hex = "0.4.3"
