[package]
name = "myki_signaling_server"
version = "0.1.0"
edition = "2021"
description = "WebSocket signaling server for Myki P2P device sync"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
